updated css style sheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,11 @@ body {
     margin-left: 20px;
     position: center;
   }
-  .nav {
-    position: center;
-  }
+ .links li {
+    display: inline;
+    padding-left: 50px;
+    text-align: left;
+ }
 
   .content {
     color: white;
