--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,71 @@
 body {
     background-color: black;
-  }
-  
-  h1 {
+    border: none;
+    border-color: blue;
+    
+}
+h1 {
+    color: white;
     text-align: center;
-    color: white;
-    margin-left: 20px;
-    position: center;
-  }
-  section {
-    text-align: center;
-    color: white;
-    margin-left: 20px;
-    position: center;
-  }
-  .profile-photo {
-    position: center;   
-    border-style: solid;
-    border-color: rgb(59, 58, 58);
-    border-width: 10px; 
-    border-radius: 25% 25% 25% 25%;
-    box-shadow: 10px 10px 5px white ;
-  }
-  h2 {
-    text-align: left;
-    color: white;
-    margin-left: 20px;
-    position: center;
-  }
- .links li {
-    display: inline;
-    padding-left: 50px;
-    text-align: left;
- }
+    font-size: 6em;
+    border: none;
+    border-color: white;
+    margin-top: 10px;
+}
+.center {
+    border: solid;
+    border-color: gray;
+    border-width: 15px;
+    border-radius: 50% 50% 50% 50%;
+    box-shadow: 10px 10px 10px gray;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+}
+.links li {
+    display: inline-block;
+    font-size: 3em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding-left: 210px; 
+    padding-top: 20px;  
+}
+.links a:hover {
+    text-shadow: 5px 5px 5px gray;
 
-  .content {
+}
+.content {
     color: white;
-    text-align: left;
-  }
+    padding-top: 500px;
+    font-size: 2em;
+}
+.about-me {
+    margin-bottom: 10px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #595d5f;
+    color: black
+    
+
+}
+.Projects {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifs;
+    background-color: #595d5f;
+    color: black
+}
+.Contact-info {
+    margin-bottom: 20px;
+    text-align: right;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #595d5f;
+    color: black
+}
