--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,13 @@
 body {
+    margin: 0;
     background-color: black;
-    border: none;
-    border-color: blue;
-    
 }
+   
+
 h1 {
     color: white;
     text-align: center;
     font-size: 6em;
-    border: none;
-    border-color: white;
     margin-top: 10px;
 }
 .center {
@@ -18,7 +16,7 @@ h1 {
     border-width: 15px;
     border-radius: 50% 50% 50% 50%;
     box-shadow: 10px 10px 10px gray;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 50px;
     display: block;
     margin-left: auto;
@@ -29,12 +27,19 @@ h1 {
     display: inline-block;
     font-size: 3em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 210px; 
-    padding-top: 20px;  
+    padding-left: 220px; 
+    padding-top: 30px;  
+    
 }
 .links a:hover {
     text-shadow: 5px 5px 5px gray;
+    text-decoration: none; 
+    color: teal;
 
+}
+a:visited{
+    text-decoration: none;
+    color: teal;
 }
 .content {
     color: white;
