--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,18 @@
 body {
     margin: 0;
     background-color: black;
+    /*instert background image*/
 }
    
-
+/*This is my main header "JOSELYN ZUNIGA"*/
 h1 {
     color: white;
     text-align: center;
     font-size: 6em;
     margin-top: 10px;
+    margin-bottom: 50px;
 }
+/* My profile picture*/
 .center {
     border: solid;
     border-color: gray;
@@ -18,58 +21,67 @@ h1 {
     box-shadow: 10px 10px 10px gray;
     margin-top: 20px;
     margin-bottom: 50px;
-    display: block;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
     width: 25%;
 }
+/* My navagation links - About Me, Projects, Contact Info */
 .links li {
+    text-decoration: none;
     display: inline-block;
     font-size: 3em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 220px; 
     padding-top: 30px;  
+
     
 }
+/*This will make my links hightlight when I hoover over them*/
 .links a:hover {
     text-shadow: 5px 5px 5px gray;
-    text-decoration: none; 
     color: teal;
 
 }
+/*This will make my links go back to normal and keep them from showing up as visted sites */
 a:visited{
     text-decoration: none;
     color: teal;
 }
+/* Content are my sections on my page. My About Me, Projects, and Contact Info */
 .content {
-    color: white;
     padding-top: 500px;
     font-size: 2em;
+    padding: 40px 50px;
+    
 }
+/* About Me section. Need to make the side margins smaller*/
 .about-me {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     padding: 50px;
-    height: 300px;
+    height: 200px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #595d5f;
     color: black
     
 
 }
+/* My Project section. Need to make the side margins smaller*/
 .Projects {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    text-align: center;
+    margin-bottom: 5px;
+    padding: 700px;
+    height: 500px;
+    display: flexbox;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifs;
     background-color: #595d5f;
     color: black
 }
+/* My Contact Info section. Need to make the side margins smaller*/
 .Contact-info {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-align: right;
     padding: 50px;
-    height: 300px;
+    height: 200px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #595d5f;
     color: black
