--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,39 +50,47 @@ a:visited{
 }
 /* Content are my sections on my page. My About Me, Projects, and Contact Info */
 .content {
-    padding-top: 500px;
+    padding-top: 300px;
     font-size: 2em;
     padding: 40px 50px;
+    color: white;
     
 }
 /* About Me section. Need to make the side margins smaller*/
 .about-me {
-    margin-bottom: 30px;
+    flex: 4;
+    color: white;
     padding: 50px;
-    height: 200px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #595d5f;
-    color: black
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
     
 
-}
 /* My Project section. Need to make the side margins smaller*/
-.Projects {
-    margin-bottom: 5px;
-    padding: 700px;
-    height: 500px;
-    display: flexbox;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifs;
-    background-color: #595d5f;
-    color: black
+.
+
+
+Projects {
+    color: white;
+}
+
+img {
+    max-width: 25%;
 }
 /* My Contact Info section. Need to make the side margins smaller*/
 .Contact-info {
-    margin-bottom: 30px;
-    text-align: right;
+    flex: 4;
+    color: white;
     padding: 50px;
-    height: 200px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #595d5f;
-    color: black
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
+
+.projects-container{
+    display: flex;
+}
+
