--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,32 +3,10 @@ body {
     background-color: black;
     /*instert background image*/
 }
-   .head {
-    margin-top: 10px;
-    margin-bottom: 20px;
-   }
 /*This is my main header "JOSELYN ZUNIGA"*/
-.container {
-    
-    display: flex;
-    align-items: center;
-    justify-content: center
-  }
-  
-  img {
-    max-width: 100%
-  }
-  
-  .image {
-    flex-basis: 40%
-  }
-  
-  .text {
-    font-size: 20px;
-    padding-left: 20px;
-  }
+
 /* My profile picture*/
-.center {
+.img {
     border: solid;
     border-color: black;
     border-width: 15px;
@@ -37,7 +15,7 @@ body {
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    width: 25%;
+    
 }
 /* My navagation links - About Me, Projects, Contact Info */
 .links li {
@@ -49,9 +27,9 @@ body {
     justify-content: space-evenly;
 
     text-decoration: none;
-    font-size: 3em;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 200px; 
+    font-size: 2em;
+    font-family: 'Courier New';
+    padding-left: 50px; 
     padding-top: 30px;  
 
     
@@ -116,14 +94,3 @@ a:visited{
     padding-top: 30px;  
 }
 
-.footer {
-    flex: 4;
-    color: white;
-    padding: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    font-family: 'Arial, Helvetica, sans-serif';
-
-}
